...
              Row(
                mainAxisAlignment: MainAxisAlignment.center,
                children: <Widget>[
                  const SizedBox(width: 46.0),
                  Expanded(
                    child: Text(
                      'Please enter your invite code',
                      maxLines: 3,
                      style: localHeadingStyle,
                      textAlign: TextAlign.center,
                    ),
                  ),
                  GestureDetector(
...
                              StringPrefsEnum.profilePhotoUrl,
                            );
                            profilePhotoUrl ??=
                                'bundle://avatar-${Random.secure().nextInt(49) + 1}';

                            await Utilities.showAlert(
                              'Success!',
                              'The app has been successfully set up for $userName.',
                              'OK',
                            );

                            Navigator.pop(navigatorKey.currentContext!);
                            if (!mounted) return;
...
