...
                            context,
                            MaterialPageRoute<void>(
                              builder: (_) => const UseInviteCodePage(),
                            ),
                          ),
                          child: Text(
                            'I have an invite code',
                            style: ts_button,
                            textAlign: TextAlign.center,
                          ),
                        ),
                      ),
                      const SizedBox(height: 12),
...
